test/fixtures/reporters/stylish/loaders/entry.js
require('chalk');

// warning
// console.log(require);

// error
// if (!window) { require('test'); }

require('./image.jpg');
